# CSC842

./: .gitignore  README.md
common/: README.md  pyproject.toml
common/android_analyzer_common/: __init__.py  utils.py
project1/: README.md  pyproject.toml
project1/android_analyzer/: __main__.py  adb_utils.py  package.py  utils.py
project1/src/: adb_utils.py  dashboard.py
project2/: README.md  pyproject.toml
project2/android_package_analyzer/: __main__.py  adb_package_utils.py
project3/: README.md  pyproject.toml
project3/android_dashboard/: __main__.py
project4/: README.md  pyproject.toml
project4/logcat_analyzer/: __main__.py
project5/: Makefile  README.md  dns_hijacker
project5/pubinc/: dns_hijacker.h
project5/src/: dns_hijacker.cpp
