[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "android-analyzer-common"
version = "1.0.0"
dependencies = [
    "psutil",
    "pure-python-adb",
]
requires-python = ">= 3.6"
authors = [
    {name = "Craig Tieman", email = "craig.tieman2007@gmail.com"}
]
description = "android-analyzer-common is not meant to be a standalone package. It is designed to be a Python wheel containing common code used across different tools in the android-analyzer toolset."
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["adb", "android"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.6",
]

[project.urls]
Repository = "https://github.com/craig2007/CSC842/tree/main/common"
