[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "android-analyzer"
version = "1.0.0"
dependencies = [
    "psutil",
    "pure-python-adb",
]
requires-python = ">= 3.6"
authors = [
    {name = "Craig Tieman", email = "craig.tieman2007@gmail.com"}
]
description = "Tool to help analyze packages and processes being run on an Android device"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["adb", "android"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.6",
]

[project.urls]
Repository = "https://github.com/craig2007/CSC842/tree/main/project1"
