[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "android-dashboard"
version = "1.0.0"
dependencies = [
    "android-analyzer-common",
    "android_analyzer",
    "android_package_analyzer",
    "dash",
    "pandas",
    "pure-python-adb",
]
requires-python = ">= 3.6"
authors = [
    {name = "Craig Tieman", email = "craig.tieman2007@gmail.com"}
]
description = "GUI tool to help better visualize the results from android-analyzer and android-package-analyzer"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["adb", "android"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.6",
]

[project.urls]
Repository = "https://github.com/craig2007/CSC842/tree/main/project3"
