[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logcat-analyzer"
version = "1.0.0"
dependencies = [
    "android-analyzer-common",
    "requests",
    "pure-python-adb",
]
requires-python = ">= 3.6"
authors = [
    {name = "Craig Tieman", email = "craig.tieman2007@gmail.com"}
]
description = "A tool for pulling logcat logs from a selected Android device and using the llama AI model to analyze the logs."
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["adb", "android"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.6",
]

[project.urls]
Repository = "https://github.com/craig2007/CSC842/tree/main/project4"
